2015-09-08 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSPropertyList.m: Fix writing base64 data.

2015-09-04 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSString.m: Optimisation for formatting strings that are stored as
	UTF-16 (use memcpy instead of looping over the characters).
	* Tests/base/NSString/unichar_format.m: Test cases for formatting.

2015-09-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Fix handling of empty capture groups.

2015-08-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Fix potential deadlock with adding observers.
	* Source/NSPropertyList.m: Fix a few mutability errors.  Improve
	parsing NSData performance. Add support for parsing base64 encoded
	data in text property lists (delimited by <[ and ]>).

2015-08-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Improve descriptions for debug.
	* Source/Additions/NSData+GNUstepBase.m: Add escaped representation.
	* Source/GSHTTPURLHandle.m: Use escaped text format for debug log
	(and plist armored format) to ensure that we safely log binary data

2015-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/GSFileHandle.m: include winsock2.h earlier for msys2

2015-08-17  Fred Kiefer <fredkiefer@gmx.de>

	* Resources/Korean.lproj/Localizable.string: Correct encoding
	* Resources/Languages/Korean: Add missing quotes.
	Patch by Seong-Gu Lee <sgleehd@gmail.com>

2015-08-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSData+GNUstepBase.h: Simple gzip API
	* Source/Additions/NSData+GNUstepBase.m: Use zlib to zip/unzip data
	* Tests/base/NSData/additions.m: tests for NSData additions (gzip)
	* Tests/base/NSData/Lorum: Data file for compress/uncompress tests

2015-08-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Use the compiler provided by gnustep-make unless
	it's specifically overridden in the environment.

2015-08-07 Niels Grewe <niels.grewe@halbordnung.de>
